--- a/src/templates/settings/_index.twig
+++ b/src/templates/settings/_index.twig
@@ -15,7 +15,7 @@
 
         {{ forms.autosuggestField({
             first: true,
-            label: 'Client ID'|t('xero'),
+            label: 'Client ID Foo'|t('xero'),
             instructions: "The Client ID issued by Xero when you created your app."|t('xero'),
             id: 'xeroClientId',
             name: 'settings[xeroClientId]',
